--- a/AIService.Application/AIService.Application.csproj
+++ b/AIService.Application/AIService.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AIService.Domain\AIService.Domain.csproj" />
+    <ProjectReference Include="..\Shared.Infrastructure\Shared.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
