--- a/ReproductionService.Infrastructure/ReproductionService.Infrastructure.csproj
+++ b/ReproductionService.Infrastructure/ReproductionService.Infrastructure.csproj
@@ -25,7 +25,8 @@
       <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="8.0.0" />
       <PackageReference Include="Npgsql" Version="8.0.3" />
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+      <PackageReference Include="DotNetEnv" Version="3.1.1" />
     </ItemGroup>
 
 </Project>
