--- a/ReproductionService.Presentation/appsettings.json
+++ b/ReproductionService.Presentation/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
 
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres;Port=5432;Database=reproduction_db;Username=postgres;Password=admin"
+  },
   "Database": {
     "EnableSensitiveDataLogging": false
   },
